--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,18 +12,21 @@
 
   <body>
      <header>
-    <% if user_signed_in? %>
-      <li>
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      </li>
-    <% else %>
-      <li>
-        <%= link_to "新規登録", new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to "ログイン", new_user_session_path %>
-      </li>
-    <% end %>
+    <nav>
+      <%= link_to 'Bookers', root_path %>
+
+      <% if user_signed_in? %>
+        <%= link_to 'Home', user_path(current_user) %>
+        <%= link_to 'Users', users_path %>
+        <%= link_to 'Books', books_path %>
+        <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to 'Home', root_path %>
+        <%= link_to 'About', about_path %>
+        <%= link_to 'Sign up', new_user_registration_path %>
+        <%= link_to 'Log in', new_user_session_path %>
+      <% end %>
+    </nav>
   </header>
     <%= yield %>
   </body>
