--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,12 @@
       <% end %>
     </nav>
   </header>
+　
     <%= yield %>
   </body>
+  
+  <footer>
+  　<p>CopyRight Infratop.inc</p>
+　</footer>
+  
 </html>
