[Add]topページとaboutページを作成

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,14 @@
-<h1>Topページ</h1>
+<h1>welcome to Bookers !!</h1>
+
+　<h2>In Bookers,</h2>
+　
+　<h3>you can share and exchange your opinions , inpressions , and emotions
+　<br>about various books!
+　</h3>
+
+
+
+<div class="top-buttons">
+  <%= link_to "Log in", new_user_session_path, class: "btn btn-primary" %>
+  <%= link_to "Sign up", new_user_registration_path, class: "btn btn-secondary" %>
+</div>
