--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,9 +1,25 @@
-<% @books.each do |book| %>
-  <div>
-    <%= image_tag book.get_image %>
-    <p>投稿ユーザー画像：<%= image_tag 'sample-author1.jpg' %></p>
-    <p>Title：<%= book.title %></p>
-    <p>Opinion：<%= book.body %></p>
-   
-  </div>
-<% end %>
+<div class="container">  
+  <div class="row">    
+　　<div class="col-md-3">
+　　  <div id="user-info">
+        <h2>User Info</h2>
+        <%= render 'users/user_info' %>
+        
+        <h2>New book</h2>
+        <%= form_with model: @book do |f| %>
+
+          <h4>Title</h4>
+          <%= f.text_field :book_title %>
+          <h4>Opinion</h4>
+          <%= f.text_area :book_body %><br>
+          <%= f.submit 'Create Book',class: 'btn btn-success'%>
+         <% end %>
+      </div>
+　　</div>
+  </div>  
+</div>  
+
+
+
+
+
