--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,17 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<h1>User info</h1>
+
+<%= form_with model: @book, url:'/lists' do |f| %>
+
+  <h4>Name</h4>
+  <%= f.text_field :title %>
+  
+  <h4>Image</h4>
+  <%= f.file_field :image, accept: "image/*" %>
+  
+  <h4>Introduction</h4>
+  <%= f.text_area :body %>
+  
+  
+  <br><%= f.submit 'Update User' %>
+  
+<% end %>
