--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Users#show</h1>
 
+<!-- ユーザーの投稿一覧 -->
+
+<% @books.each do |book| %>
+<div>
+  <%= link_to boook_path(book.id) do %>
+    <%= image_tag post_image.get_image %>
+  <% end %>
+  <p>投稿ユーザー画像：<%= image_tag book.user.get_profile_image(100,100) %></p>
+  <p>タイトル：<%= book.shop_name %></p>
+  <p>説明：<%= book.caption %></p>
+  <p>ユーザーネーム：<%= book.user.name %></p>
+</div>
+<% end %>
