--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,25 +1,49 @@
-<div class="container">  
-  <div class="row">    
-　　<div class="col-md-3">
-　　  <div id="user-info">
+<div class="container">
+  <div class="row">
+    <!-- 左側のユーザー情報と新規投稿フォーム -->
+    <div class="col-md-3">
+      <div id="user-info">
         <h2>User Info</h2>
         <%= render 'users/user_info' %>
-        
+
         <h2>New book</h2>
         <%= form_with model: @book do |f| %>
-
           <h4>Title</h4>
           <%= f.text_field :book_title %>
           <h4>Opinion</h4>
           <%= f.text_area :book_body %><br>
-          <%= f.submit 'Create Book',class: 'btn btn-success'%>
-         <% end %>
+          <%= f.submit 'Create Book', class: 'btn btn-success' %>
+        <% end %>
       </div>
-　　</div>
-  </div>  
-</div>  
-
-
-
-
-
+    </div>
+    
+    <!-- 右側のBook一覧 -->
+    <div class="col-md-8">
+      <h2>Books</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Opinion</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+            <tr>
+              <td><%= link_to book.title, book_path(book) %></td>
+              <td><%= book.body %></td>
+              <td>
+                <% if book.user.profile_image.attached? %>
+                  <%= image_tag book.user.profile_image.variant(resize: "80x80"), class: "avatar" %>
+                <% else %>
+                  No Image
+                <% end %>
+                <%= book.user.name %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
