--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,7 +7,7 @@
         <%= render 'users/user_info' %>
 
         <h2>New book</h2>
-        <%= form_with model: @book do |f| %>
+        <%= form_with model: @new_book do |f| %>
           <h4>Title</h4>
           <%= f.text_field :book_title %>
           <h4>Opinion</h4>
