--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,24 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-body">
+          <div class="d-flex align-items-center mb-3">
+            <% if @book.user.profile_image.attached? %>
+              <%= image_tag @book.user.profile_image.variant(resize: "80x80"), class: "avatar mr-3" %>
+            <% else %>
+              <%= image_tag 'no_image.jpg' %>
+            <% end %>
+            <h5 class="card-title"><%= @book.title %></h5>
+          </div>
+          <p class="card-text"><%= @book.body %></p>
+          <p class="card-text"><%= @book.user.name %></p>
+          <div class="d-flex justify-content-end">
+            <%= link_to 'Edit', edit_book_path(@book), class: "btn btn-success mr-2" %>
+            <%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか?' }, class: "btn btn-danger" %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
