--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,9 +9,9 @@
         <h2>New book</h2>
         <%= form_with model: @new_book do |f| %>
           <h4>Title</h4>
-          <%= f.text_field :book_title %>
+          <%= f.text_field :title %>
           <h4>Opinion</h4>
-          <%= f.text_area :book_body %><br>
+          <%= f.text_area :body %><br>
           <%= f.submit 'Create Book', class: 'btn btn-success' %>
         <% end %>
       </div>
@@ -23,6 +23,7 @@
       <table class="table">
         <thead>
           <tr>
+            <th></th>
             <th>Title</th>
             <th>Opinion</th>
           </tr>
@@ -30,16 +31,16 @@
         <tbody>
           <% @books.each do |book| %>
             <tr>
-              <td><%= link_to book.title, book_path(book) %></td>
-              <td><%= book.body %></td>
               <td>
                 <% if book.user.profile_image.attached? %>
                   <%= image_tag book.user.profile_image.variant(resize: "80x80"), class: "avatar" %>
                 <% else %>
-                  No Image
+                  <%= image_tag 'no_image.jpg' %>
                 <% end %>
-                <%= book.user.name %>
               </td>
+              <td><%= link_to book.title, book_path(book) %></td>
+              <td><%= book.body %></td>
+              
             </tr>
           <% end %>
         </tbody>
