[Add]bookのindexページの左側を作成

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,24 +1,46 @@
+<!-- index.html.erb -->
 <div class="container">
   <div class="row">
-    <!-- 左側のユーザー情報と新規投稿フォーム -->
+    <!-- Left section with user information and new post form -->
     <div class="col-md-3">
+      <h2>User info</h2>
       <div id="user-info">
-        <h2>User Info</h2>
-        <%= render 'users/user_info' %>
+        <% if current_user.profile_image.attached? %>
+          <%= image_tag current_user.profile_image, class: "img-fluid rounded-circle mb-3" %>
+        <% else %>
+          <%= image_tag 'no_image.jpg', class: "img-fluid rounded-circle mb-3" %>
+        <% end %>
+        
+        <table class="table">
+          <tbody>
+            <tr>
+              <th>Name</th>
+              <th><%= current_user.name %></th>
+            </tr>
+            <tr>
+              <th>Introduction</th>
+              <th><%= current_user.introduction %></th>
+            </tr>
+          </tbody>
+        </table>
 
-        <h2>New book</h2>
-        <%= form_with model: @new_book do |f| %>
-          <h4>Title</h4>
-          <%= f.text_field :title %>
-          <h4>Opinion</h4>
-          <%= f.text_area :body %><br>
-          <%= f.submit 'Create Book', class: 'btn btn-success' %>
+        <%= link_to(edit_user_path(current_user), class: "btn btn-primary btn-block mb-3") do %>
+          <i class="fa-solid fa-user-gear mr-2"></i> 
         <% end %>
       </div>
+
+      <h2 class="mt-5">New Book</h2>
+      <%= form_with model: @new_book, class: "mb-5" do |f| %>
+        <h5>Title</h5>
+        <%= f.text_field :title, class: "form-control mb-2" %>
+        <h5>Opinion</h5>
+        <%= f.text_area :body, class: "form-control mb-2" %>
+        <%= f.submit 'Create Book', class: 'btn btn-success btn-block' %>
+      <% end %>
     </div>
     
-    <!-- 右側のBook一覧 -->
-    <div class="col-md-8">
+    <!-- Right section with book listing -->
+    <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
       <table class="table">
         <thead>
@@ -33,14 +55,13 @@
             <tr>
               <td>
                 <% if book.user.profile_image.attached? %>
-                  <%= image_tag book.user.profile_image.variant(resize: "80x80"), class: "avatar" %>
+                  <%= image_tag book.user.profile_image.variant(resize: "80x80"), class: "avatar img-fluid rounded-circle" %>
                 <% else %>
-                  <%= image_tag 'no_image.jpg' %>
+                  <%= image_tag 'no_image.jpg', class: "img-fluid rounded-circle" %>
                 <% end %>
               </td>
               <td><%= link_to book.title, book_path(book) %></td>
               <td><%= book.body %></td>
-              
             </tr>
           <% end %>
         </tbody>
