--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -7,8 +7,20 @@
     <%= image_tag 'no_image.jpg' %>
   <% end %>
   
-  <p>name <%= current_user.name %></p>
-  <p>introduction <%= current_user.introduction %></p>
-
-  <%= link_to 'Edit User Info', edit_user_path(current_user) %>
+  <table class = "table">
+    <tbody>
+      <tr>
+        <th>name</th>
+        <th><%= current_user.name %></th>
+      </tr>
+      <tr>
+        <th>introduction</th>
+        <th><%= current_user.introduction %></th>
+      </tr>
+    </tbody>
+  </table>
+ 
+ <%= link_to(edit_user_path(current_user)) do %>
+  <i class="fa-solid fa-user-gear"></i> Edit User Info
+<% end %
 </div>
