--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,9 @@
 <div class="container">
   <div class="row">
+    
+    <%= render 'users/user_info', user: current_user, book: @new_book %>
+
+    
     <div class="col-md-8 offset-md-1">
       <h2>Book detail</h2>
       <table class="table">
