--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -1,26 +1,36 @@
-<div id="user-info">
- 
-  
-  <% if current_user.profile_image.attached? %>
-    <%= image_tag current_user.profile_image %>
-  <% else %>
-    <%= image_tag 'no_image.jpg' %>
+<div class="col-md-3">
+  <h2>User info</h2>
+  <div id="user-info">
+    <% if user.profile_image.attached? %>
+      <%= image_tag user.profile_image, class: "img-fluid rounded-circle mb-3" %>
+    <% else %>
+      <%= image_tag 'no_image.jpg', class: "img-fluid rounded-circle mb-3" %>
+    <% end %>
+    
+    <table class="table">
+      <tbody>
+        <tr>
+          <th>Name</th>
+          <th><%= user.name %></th>
+        </tr>
+        <tr>
+          <th>Introduction</th>
+          <th><%= user.introduction %></th>
+        </tr>
+      </tbody>
+    </table>
+
+    <%= link_to(edit_user_path(user), class: "btn btn-primary btn-block mb-3") do %>
+      <i class="fa-solid fa-user-gear mr-2"></i> 
+    <% end %>
+  </div>
+
+  <h2 class="mt-5">New Book</h2>
+  <%= form_with model: @new_book, class: "mb-5" do |f| %>
+    <h5>Title</h5>
+    <%= f.text_field :title, class: "form-control mb-2" %>
+    <h5>Opinion</h5>
+    <%= f.text_area :body, class: "form-control mb-2" %>
+    <%= f.submit 'Create Book', class: 'btn btn-success btn-block' %>
   <% end %>
-  
-  <table class = "table">
-    <tbody>
-      <tr>
-        <th>name</th>
-        <th><%= current_user.name %></th>
-      </tr>
-      <tr>
-        <th>introduction</th>
-        <th><%= current_user.introduction %></th>
-      </tr>
-    </tbody>
-  </table>
- 
- <%= link_to(edit_user_path(current_user)) do %>
-  <i class="fa-solid fa-user-gear"></i> Edit User Info
-<% end %
 </div>
