--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,23 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <h1 class="mb-4">Editing Book</h1>
+      <%= form_with model: @book, local: true, html: { class: 'needs-validation', novalidate: '' } do |f| %>
+        <div class="form-group">
+          <label for="book_title">Title</label>
+          <%= f.text_field :title, id: "book_title", class: "form-control", required: true %>
+        </div>
+        <div class="form-group">
+          <label for="book_body">Opinion</label>
+          <%= f.text_area :body, id: "book_body", class: "form-control", required: true %>
+        </div>
+        <%= f.submit 'Update Book', class: 'btn btn-success btn-block' %>
+      <% end %>
+
+      <div class="mt-4">
+        <%= link_to 'Show', book_path(@book) %> |
+        <%= link_to 'Back', books_path %>
+      </div>
+    </div>
+  </div>
+</div>
