--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,22 +12,65 @@
 
   <body>
      <header>
-    <nav>
-      <%= link_to 'Bookers', root_path %>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <%= link_to 'Bookers', root_path, class: "navbar-brand" %>
 
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <% if user_signed_in? %>
-        <%= link_to 'Home', user_path(current_user) %>
-        <%= link_to 'Users', users_path %>
-        <%= link_to 'Books', books_path %>
-        <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <%= link_to user_path(current_user), class: "nav-link text-light" do %>
+            <i class="fa-solid fa-house"></i>Home
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to users_path, class: "nav-link text-light" do%>
+            <i class="fa-solid fa-users"></i>Users
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to books_path, class: "nav-link text-light" do%>
+            <i class="fa-solid fa-book-open"></i>Books
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-light" do%>
+            <i class="fa-solid fa-right-from-bracket"></i>Log out
+            <% end %>
+          </li>
+        </ul>
       <% else %>
-        <%= link_to 'Home', root_path %>
-        <%= link_to 'About', about_path %>
-        <%= link_to 'Sign up', new_user_registration_path %>
-        <%= link_to 'Log in', new_user_session_path %>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <%= link_to root_path, class: "nav-link text-light" do%>
+            <i class="fa-solid fa-house"></i>Home
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to about_path, class: "nav-link text-light" do%>
+            <i class="fa-solid fa-link"></i>About
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to new_user_registration_path, class: "nav-link text-light" do%>
+            <i class="fa-solid fa-user-plus"></i>Sign up
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to new_user_session_path, class: "nav-link text-light" do%>
+            <i class="fa-solid fa-right-to-bracket"></i>Log in
+            <% end %>
+          </li>
+        </ul>
       <% end %>
-    </nav>
-  </header>
+    </div>
+  </nav>
+</header>
+
 　
     <%= yield %>
   </body>
