--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,7 @@
-users/showページ
+<div class="container">
+  <div class="row">
+    
+   <%= render 'users/user_info', user: current_user, book: @new_book %>
+   
+   </div>
+</div>
