--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,8 +75,14 @@
     <%= yield %>
   </body>
   
-  <footer>
-  　<p>CopyRight Infratop.inc</p>
-　</footer>
+<footer>
+  <div class="container mt-5">
+    <div class="row">
+      <div class="mx-auto">
+        <p>CopyRight Infratop.inc</p>
+      </div>
+    </div>
+  </div>
+</footer>
   
 </html>
