--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,14 +1,19 @@
-<h1>welcome to Bookers !!</h1>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto col-lg-8">
+      <h1>welcome to <i class="fa-solid fa-book"></i>Bookers !!</h1>
+       <p>In <i class="fa-solid fa-book"></i>Bookers,</p>
+       <p>you can share and exchange your opinions , inpressions , and emotions</p>
+       <p>about various books!</p>
 
-　<h2>In Bookers,</h2>
-　
-　<h3>you can share and exchange your opinions , inpressions , and emotions
-　<br>about various books!
-　</h3>
-
-
-
-<div class="top-buttons">
-  <%= link_to "Log in", new_user_session_path, class: "btn btn-primary" %>
-  <%= link_to "Sign up", new_user_registration_path, class: "btn btn-secondary" %>
+      <button type="button" class="btn btn-primary btn-lg btn-block">
+       <%= link_to "Log in", new_user_session_path, class: "btn btn-primary" %>
+      </button>
+  
+      <button type="button" class="btn btn-secondary btn-lg btn-block">
+       <%= link_to "Sign up", new_user_registration_path, class: "btn btn-secondary" %>
+      </button>
+    </div>
+  </div>
 </div>
+
