--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,12 @@
-<h1>Welcome to Bookers!</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8">
+      <h1>Welcome to <i class="fa-solid fa-book"></i>Bookers!</h1>
+
+    </div>
+  </div>
+</div>
+
+
+
+
