--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,40 @@
-<h1>Users List</h1>
+<div class="container">
+  <div class="row">
+ 
+ <%= render 'user_info', user: current_user, book: @new_book %>
 
-<ul>
-  <% @users.each do |user| %>
-    <li><%= user.name %></li>
-  <% end %>
-</ul>
+
+
+<div class="col-md-8 offset-md-1">
+  <h2>Users</h2>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>image</th>
+        <th>name</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @users.each do |user| %>
+        <tr>
+          <td>
+            <% if user.profile_image.attached? %>
+              <%= image_tag user.profile_image.variant(resize: "80x80"), class: "avatar img-fluid rounded-circle" %>
+            <% else %>
+              <%= image_tag 'no_image.jpg', class: "img-fluid rounded-circle" %>
+            <% end %>
+          </td>
+          <td><%= user.name %></td>
+          <td><%= link_to "Show", user_path(user) %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+
+</div>
+</div>
+
+
+
