--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,5 +3,39 @@
     
    <%= render 'users/user_info', user: current_user, book: @new_book %>
    
-   </div>
+   
+   <div class="col-md-8 offset-md-1">
+  <h2>Books</h2>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Image</th>
+        <th>Title</th>
+        <th>Opinion</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% if @books.present? %>
+        <% @books.each do |book| %>
+          <tr>
+            <td>
+              <% if @user.profile_image.attached? %>
+                <%= image_tag @user.profile_image.variant(resize: "80x80"), class: "avatar img-fluid rounded-circle" %>
+              <% else %>
+                <%= image_tag 'no_image.jpg', class: "img-fluid rounded-circle" %>
+              <% end %>
+            </td>
+            <td><%= link_to book.title, book_path(book) %></td>
+            <td><%= book.body %></td>
+          </tr>
+        <% end %>
+      <% else %>
+        <tr>
+          <td colspan="3">No books found.</td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+    </div>
+  </div>
 </div>
