--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,17 +1,27 @@
-<h1>User info</h1>
-
-<%= form_with model: @book, url:'/lists' do |f| %>
-
-  <h4>Name</h4>
-  <%= f.text_field :title %>
-  
-  <h4>Image</h4>
-  <%= f.file_field :image, accept: "image/*" %>
-  
-  <h4>Introduction</h4>
-  <%= f.text_area :body %>
-  
-  
-  <br><%= f.submit 'Update User' %>
-  
-<% end %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <h1 class="mb-4">User info</h1>
+      <%= form_with model: @user, url: user_path(@user), method: :patch do |f| %>
+        <div class="form-group">
+          <label for="user_name">Name</label>
+          <%= f.text_field :name, id: "user_name", class: "form-control", required: true %>
+        </div>
+        
+        <div class>
+          <label for="user_profile_image">Image</label>
+          <p></p>
+          <%= f.file_field :profile_image, accept: "image/*" %>
+        </div>
+        <p></p>
+        
+        <div class="form-group">
+          <label for="user_introduction">Introduction</label>
+          <%= f.text_area :introduction, id: "user_introduction", class: "form-control", required: true %>
+        </div>
+        
+        <%= f.submit 'Update User', class: "btn btn-primary" %>
+      <% end %>
+    </div>
+  </div>
+</div>
