--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,8 +70,12 @@
     </div>
   </nav>
 </header>
-
-　
+　　　<!-- フラッシュメッセージの表示 -->
+    <% flash.each do |key, value| %>
+      <div class="alert alert-<%= key %>">
+        <%= value %>
+      </div>
+    <% end %>
 
 　
     <%= yield %>
