--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -26,7 +26,7 @@
   </div>
 
   <h2 class="mt-5">New Book</h2>
-  <%= form_with model: @new_book, class: "mb-5" do |f| %>
+  <%= form_with model: Book.new, class: "mb-5" do |f| %>
     <h5>Title</h5>
     <%= f.text_field :title, class: "form-control mb-2" %>
     <h5>Opinion</h5>
