--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,10 @@
 
+
+
+<div class="container">
+  
   <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
+  <%= @book.errors.count %>errors occurred.
   <ul>
     <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
@@ -8,15 +12,14 @@
   </ul>
 <% end %>
 
-
-<div class="container">
   <div class="row">
     
+  
+
 
     
-   <%= render 'users/user_info', user: current_user, book: @new_book %>
+   <%= render 'users/user_info', user: current_user, book: @book %>
 
-    
     <!-- Right section with book listing -->
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
