--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     
-   <%= render 'users/user_info', user: current_user, book: @new_book %>
+   <%= render 'users/user_info', user: current_user, book: @book %>
    
    
    <div class="col-md-8 offset-md-1">
