--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,7 +1,20 @@
 <div class="container">
+  
+  
   <div class="row justify-content-center">
     <div class="col-md-6">
       <h1 class="mb-4">Editing Book</h1>
+      
+      <% if @book.errors.any? %>
+        <%= @book.errors.count %>errors occurred.
+       <ul>
+        <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+        <% end %>
+       </ul>
+      <% end %>
+
+
       <%= form_with model: @book, local: true, html: { class: 'needs-validation', novalidate: '' } do |f| %>
         <div class="form-group">
           <label for="book_title">Title</label>
