--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,10 +2,23 @@
   <div class="row justify-content-center">
     <div class="col-md-6">
       <h1 class="mb-4">User info</h1>
+      
+      <% if @user.errors.any? %>
+      <%= @user.errors.count %>errors occurred.
+      <ul>
+      <% @user.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+       <% end %>
+      </ul>
+      <% end %>
+      
+      
+      
+      
       <%= form_with model: @user, url: user_path(@user), method: :patch do |f| %>
         <div class="form-group">
           <label for="user_name">Name</label>
-          <%= f.text_field :name, id: "user_name", class: "form-control", required: true %>
+          <%= f.text_field :name, id: "user_name", class: "form-control" %>
         </div>
         
         <div class>
@@ -17,7 +30,7 @@
         
         <div class="form-group">
           <label for="user_introduction">Introduction</label>
-          <%= f.text_area :introduction, id: "user_introduction", class: "form-control", required: true %>
+          <%= f.text_area :introduction, id: "user_introduction", class: "form-control" %>
         </div>
         
         <%= f.submit 'Update User', class: "btn btn-primary" %>
