--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-8">
+    <div class="px-3 mx-auto">
       <h1>Welcome to <i class="fa-solid fa-book"></i>Bookers!</h1>
 
     </div>
