--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,4 @@
 
-
-
 <div class="container">
   
   <% if @book.errors.any? %>
@@ -14,39 +12,39 @@
 
   <div class="row">
     
-  
 
 
-    
-   <%= render 'users/user_info', user: current_user, book: @book %>
+<%= render 'users/user_info', user: current_user, book: @book %>
 
-    <!-- Right section with book listing -->
-    <div class="col-md-8 offset-md-1">
-      <h2>Books</h2>
-      <table class="table">
-        <thead>
-          <tr>
-            <th></th>
-            <th>Title</th>
-            <th>Opinion</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @books.each do |book| %>
-            <tr>
-              <td>
-                <% if book.user.profile_image.attached? %>
-                  <%= image_tag book.user.profile_image.variant(resize: "80x80"), class: "avatar img-fluid rounded-circle" %>
-                <% else %>
-                  <%= image_tag 'no_image.jpg', class: "img-fluid rounded-circle" %>
-                <% end %>
-              </td>
-              <td><%= link_to book.title, book_path(book) %></td>
-              <td><%= book.body %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-  </div>
+<!-- Right section with book listing -->
+<div class="col-md-8 offset-md-1">
+  <h2>Books</h2>
+  <table class="table">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Title</th>
+        <th>Opinion</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @books.each do |book| %>
+        <tr>
+          <td>
+            <% if book.user.profile_image.attached? %>
+              <%= link_to book_path(book) do %>
+                <%= image_tag book.user.profile_image.variant(resize: "80x80"), class: "avatar img-fluid rounded-circle" %>
+              <% end %>
+            <% else %>
+              <%= link_to book_path(book) do %>
+                <%= image_tag 'no_image.jpg', class: "img-fluid rounded-circle" %>
+              <% end %>
+            <% end %>
+          </td>
+          <td><%= link_to book.title, book_path(book) %></td>
+          <td><%= book.body %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
