--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -32,11 +32,11 @@
         <tr>
           <td>
             <% if book.user.profile_image.attached? %>
-              <%= link_to book_path(book) do %>
+              <%= link_to user_path(book.user) do %>
                 <%= image_tag book.user.profile_image.variant(resize: "80x80"), class: "avatar img-fluid rounded-circle" %>
               <% end %>
             <% else %>
-              <%= link_to book_path(book) do %>
+              <%= link_to user_path(book.user) do %>
                 <%= image_tag 'no_image.jpg', class: "img-fluid rounded-circle" %>
               <% end %>
             <% end %>
