--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,12 +12,17 @@
           <tr>
             <td>
               <% if @book.user.profile_image.attached? %>
+               <%= link_to user_path(@book.user) do %>
                 <%= image_tag @book.user.profile_image.variant(resize: "100x100"), class: "avatar mr-3" %>
+               <% end %>
               <% else %>
+               <%= link_to user_path(@book.user) do %>
                 <%= image_tag 'no_image.jpg' %>
+               <% end %>
               <% end %>
-              <br>
+               <br>
               <%= link_to @book.user.name, user_path(@book.user) %>
+
             </td>
             <td>
               <%= @book.title %>
