--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,49 +1,49 @@
 <div class="container">
-  <div class="row">
-    
-    <%= render 'users/user_info', user: current_user, book: @new_book %>
+<div class="row">
 
-    
-    <div class="col-md-8 offset-md-1">
-      <h2>Book detail</h2>
-      <table class="table">
-        
-        <tbody>
-          <tr>
-            <td>
-              <% if @book.user.profile_image.attached? %>
-               <%= link_to user_path(@book.user) do %>
-                <%= image_tag @book.user.profile_image.variant(resize: "100x100"), class: "avatar mr-3" %>
-               <% end %>
-              <% else %>
-               <%= link_to user_path(@book.user) do %>
-                <%= image_tag 'no_image.jpg' %>
-               <% end %>
-              <% end %>
-               <br>
-              <%= link_to @book.user.name, user_path(@book.user) %>
+<%= render 'users/user_info', user: @book.user, book: @new_book %>
 
-            </td>
-            <td>
-              <%= @book.title %>
-            </td>
-            <td>
-              <%= @book.body %>
-            </td>
-            <td>
-              <% if @book.user == current_user %>
-              <%= link_to 'Edit', edit_book_path(@book), class: "btn btn-success mr-2" %>
-              <% end %>
-            </td>
-            <td>
-             <% if @book.user == current_user %>
-             <%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか?' }, class: "btn btn-danger" %>
-             <% end %>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
+
+<div class="col-md-8 offset-md-1">
+<h2>Book detail</h2>
+<table class="table">
+
+<tbody>
+<tr>
+<td>
+<% if @book.user.profile_image.attached? %>
+<%= link_to user_path(@book.user) do %>
+<%= image_tag @book.user.profile_image.variant(resize: "100x100"), class: "avatar mr-3" %>
+<% end %>
+<% else %>
+<%= link_to user_path(@book.user) do %>
+<%= image_tag 'no_image.jpg' %>
+<% end %>
+<% end %>
+<br>
+<%= link_to @book.user.name, user_path(@book.user) %>
+
+</td>
+<td>
+<%= @book.title %>
+</td>
+<td>
+<%= @book.body %>
+</td>
+<td>
+<% if @book.user == current_user %>
+<%= link_to 'Edit', edit_book_path(@book), class: "btn btn-success mr-2" %>
+<% end %>
+</td>
+<td>
+<% if @book.user == current_user %>
+<%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか?' }, class: "btn btn-danger" %>
+<% end %>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
 </div>
 
